--- a/index.html
+++ b/index.html
@@ -31,107 +31,143 @@
         <img class="header__logo" src="./img/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
     </header>
 
-    <section class="city">
-        <div class="city__icon">
-            <i class="fas fa-map-marker-alt"></i>
-        </div>
-        <div class="city__text">
-            <h3>Paris, Belleville</h3>
-        </div>
-    </section>
-
-    <section class="discover">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button class="button__standard">Explorer nos restaurants</button>
-    </section>
-
-    <section class="process">
-        <h1>Fonctionnement</h1>
-
-        <div class="process_wrapper">
-            <div class="process__step">
-                <!-- <img src="images/logo/icons/smartphone.svg" alt="icone smartphone"> -->
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="mobile-alt" class="svg-inline--fa fa-mobile-alt fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="$icon-color" d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"></path></svg>
-                <p>Choissisez un restaurant</p>
-                <span>1</span>
+    <main>
+        <!-- Search-->
+        <form class="search">
+            <div class="search__icon">
+                <i class="fas fa-map-marker-alt"></i>
             </div>
-
-            <div class="process__step">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="list-ul" class="svg-inline--fa fa-list-ul fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="$icon-color" d="M48 48a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0 160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm448 16H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"></path></svg>
-                <p>Composez votre menu</p>
-                <span>2</span>
+            <div class="search__text">
+                <p>Paris, Belleville</p>
             </div>
-
-            <div class="process__step">
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="store" class="svg-inline--fa fa-store fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 616 512"><path fill="currentColor" d="M602 118.6L537.1 15C531.3 5.7 521 0 510 0H106C95 0 84.7 5.7 78.9 15L14 118.6c-33.5 53.5-3.8 127.9 58.8 136.4 4.5.6 9.1.9 13.7.9 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18 20.1 44.3 33.1 73.8 33.1 29.6 0 55.8-13 73.8-33.1 18.1 20.1 44.3 33.1 73.8 33.1 4.7 0 9.2-.3 13.7-.9 62.8-8.4 92.6-82.8 59-136.4zM529.5 288c-10 0-19.9-1.5-29.5-3.8V384H116v-99.8c-9.6 2.2-19.5 3.8-29.5 3.8-6 0-12.1-.4-18-1.2-5.6-.8-11.1-2.1-16.4-3.6V480c0 17.7 14.3 32 32 32h448c17.7 0 32-14.3 32-32V283.2c-5.4 1.6-10.8 2.9-16.4 3.6-6.1.8-12.1 1.2-18.2 1.2z"></path></svg>
-                <p>Dégustez au restaurant</p>
-                <span>3</span>
+        </form>
+        <!-- Presentation-->
+        <section class="introducing">
+            <h1 class="title">Réservez le menu qui vous convient</h1>
+            <p class="txt">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+            <div>
+                <button class="btn">Explorer nos restaurants</button>
             </div>
-        </div>
-
-    </section>
-
-    <section class="restaurants">
-
-        <h1>Restaurants</h1>
-
-        <div class="restaurants_wrapper">
-            <a href="./pages/lapalettedugout.html" class="restaurants__section">
-                <img class="restaurants__section__img" src="./img/restaurants/lapalettedugout.jpg" alt="Restaurant la Palette du Goût à Ménilmontant">
-                <span>Nouveau</span>
-                <div class="restaurants__section__text">
-                    <h2>La palette du goût</h2>
-                    <p>Ménilmontant</p>
-                    <div class="fa-stack restaurants__section__text__heart">
-                        <i class="fa-stack-1x fa-2x far fa-heart restaurants__section__text__heart__empty" aria-hidden="true"></i>
-                        <i class="fa-stack-2x fa-2x fas fa-heart restaurants__section__text__heart__full" aria-hidden="true"></i>
+        </section>
+        <!--Process-->
+        <section class="process">
+            <h2 class="title">Fonctionnement</h2>
+            <div class="process__cards">
+                <div class="process__card">
+                    <div class="process__number">
+                        <p>1</p>
+                    </div>
+                    <div class="process__icon">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <div>
+                        <p>Choisissez un restaurant</p>
                     </div>
                 </div>
-            </a>
-
-            <a href="./pages/lanoteenchantee.html" class="restaurants__section">
-                <img class="restaurants__section__img" src="./img/restaurants/lanoteenchantee.jpg" alt="Restaurant la note enchantée à Charonne">
-                <span>Nouveau</span>
-                <div class="restaurants__section__text">
-                    <h2>La note enchantée</h2>
-                    <p>Charonne</p>
-                    <div class="fa-stack restaurants__section__text__heart">
-                        <i class="fa-stack-1x fa-2x far fa-heart restaurants__section__text__heart__empty" aria-hidden="true"></i>
-                        <i class="fa-stack-2x fa-2x fas fa-heart restaurants__section__text__heart__full" aria-hidden="true"></i>
+                <div class="process__card">
+                    <div class="process__number">
+                        <p>2</p>
+                    </div>
+                    <div class="process__icon">
+                        <i class="fas fa-list-ul"></i>
+                    </div>
+                    <div>
+                        <p>Composez votre menu</p>
                     </div>
                 </div>
-            </a>
-
-            <a href="./pages/alafrancaise.html" class="restaurants__section">
-                <img class="restaurants__section__img" src="./img/restaurants/alafrancaise.jpg" alt="Restaurant À la française à la Cité rouge">
-                <div class="restaurants__section__text">
-                    <h2>À la française</h2>
-                    <p>Cité rouge</p>
-                    <div class="fa-stack restaurants__section__text__heart">
-                        <i class="fa-stack-1x fa-2x far fa-heart restaurants__section__text__heart__empty" aria-hidden="true"></i>
-                        <i class="fa-stack-2x fa-2x fas fa-heart restaurants__section__text__heart__full" aria-hidden="true"></i>
+                <div class="process__card">
+                    <div class="process__number">
+                        <p>3</p>
+                    </div>
+                    <div class="process__icon">
+                        <i class="fas fa-store"></i>
+                    </div>
+                    <div>
+                        <p>Dégustez au restaurant</p>
                     </div>
                 </div>
-            </a>
-
-            <a href="./pages/ledelicedessens.html" class="restaurants__section">
-                <img class="restaurants__section__img" src="./img/restaurants/ledelicedessens.jpg" alt="Restaurant le délice des sens à Folie-Méricourt">
-                <div class="restaurants__section__text">
-                    <h2>Le délice des sens</h2>
-                    <p>Folie-Méricourt</p>
-                    <div class="fa-stack restaurants__section__text__heart">
-                        <i class="fa-stack-1x fa-2x far fa-heart restaurants__section__text__heart__empty" aria-hidden="true"></i>
-                        <i class="fa-stack-2x fa-2x fas fa-heart restaurants__section__text__heart__full" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-    </section>
-</body>
-
-
+            </div>
+        </section>
+        <!--Restaurant selection-->
+        <section class="restau">
+            <h2 class="restau__title title">Restaurants</h2>
+            <div class="restau__cards">
+                <article class="restau__card">
+                    <a class="link" href="restaurant_palette.html">
+                        <div class="restau__img-section">
+                            <img class="restau__img" src="img/la_palette_du_gout.jpg" alt="restaurant la palette du goût" />
+                        </div>
+                        <div class="restau__new">
+                            <p>Nouveau</p>
+                        </div>
+                        <div class="restau__info-section">
+                            <div class="restau__info">
+                                <h3 class="min-title">La palette du goût</h3>
+                                <p class="txt">Ménilmontant</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--full"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restau__card">
+                    <a class="link" href="restaurant_enchantee.html">
+                        <div class="restau__img-section">
+                            <img class="restau__img" src="img/la_note_enchantee.jpg" alt="restaurant la note enchantée" />
+                        </div>
+                        <div class="restau__new">
+                            <p>Nouveau</p>
+                        </div>
+                        <div class="restau__info-section">
+                            <div class="restau__info">
+                                <h3 class="min-title">La note enchantée</h3>
+                                <p class="txt">Charonne</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--full"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restau__card">
+                    <a class="link" href="restaurant_française.html">
+                        <div class="restau__img-section">
+                            <img class="restau__img" src="img/a_la_francaise.jpg" alt="restaurant à la française" />
+                        </div>
+                        <div class="restau__info-section">
+                            <div class="restau__info">
+                                <h3 class="min-title">À la française</h3>
+                                <p class="txt">Cité Rouge</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--full"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restau__card">
+                    <a class="link" href="restaurant_delice.html">
+                        <div class="restau__img-section">
+                            <img class="restau__img" src="img/le_delice_des_sens.jpg" alt="restaurant le délice des sens" />
+                        </div>
+                        <div class="restau__info-section">
+                            <div class="restau__info">
+                                <h3 class="min-title">Le délice des sens</h3>
+                                <p class="txt">Folie-Méricourt</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart heart--empty"></i>
+                                <i class="fas fa-heart heart--full"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+            </div>
+        </section>
 
 <!--Footer-->
     <footer class="footer">
