--- a/pages/ledelicedessens.html
+++ b/pages/ledelicedessens.html
@@ -193,7 +193,7 @@
         <div class="footer__logo">
           <img
             class="footer__logosvg"
-            src="../img/logo/ohmyfood-white.png"
+            src="../img/logo/ohmyfood@2x.svg"
             alt="logo de oh my food"
           />
         </div>
