css des pages de restaurants + derniers réglages animations, typographie et menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="./public/css/main.css"
       media="screen"
     />
-    <link rel="shortcut icon" href="img/restaurant.svg" />
+    <link rel="shortcut icon" href="./img/restaurants/restaurant.svg" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -127,7 +127,7 @@
               </div>
               <div class="restaurants__info-section">
                 <div class="restaurants__info">
-                  <h3 class="min-title">La palette du goût</h3>
+                  <h3 class="sub">La palette du goût</h3>
                   <p class="txt">Ménilmontant</p>
                 </div>
                 <div class="heart">
@@ -151,7 +151,7 @@
               </div>
               <div class="restaurants__info-section">
                 <div class="restaurants__info">
-                  <h3 class="min-title">La note enchantée</h3>
+                  <h3 class="sub">La note enchantée</h3>
                   <p class="txt">Charonne</p>
                 </div>
                 <div class="heart">
@@ -172,7 +172,7 @@
               </div>
               <div class="restaurants__info-section">
                 <div class="restaurants__info">
-                  <h3 class="min-title">À la française</h3>
+                  <h3 class="sub">À la française</h3>
                   <p class="txt">Cité Rouge</p>
                 </div>
                 <div class="heart">
@@ -193,7 +193,7 @@
               </div>
               <div class="restaurants__info-section">
                 <div class="restaurants__info">
-                  <h3 class="min-title">Le délice des sens</h3>
+                  <h3 class="sub">Le délice des sens</h3>
                   <p class="txt">Folie-Méricourt</p>
                 </div>
                 <div class="heart">
