--- a/pages/lanoteenchantee.html
+++ b/pages/lanoteenchantee.html
@@ -25,7 +25,7 @@
       href="../public/css/main.css"
       media="screen"
     />
-    <link rel="shortcut icon" href="../img/restaurant.svg" />
+    <link rel="shortcut icon" href="../img/restaurants/restaurant.svg" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -119,6 +119,7 @@
                 </div>
               </article>
             </section>
+
             <section class="menu__course">
               <div class="menu__sub">
                 <h2>Plats</h2>
@@ -160,6 +161,7 @@
                 </div>
               </article>
             </section>
+
             <section class="menu__course">
               <div class="menu__sub">
                 <h2>Desserts</h2>
@@ -202,6 +204,7 @@
               </article>
             </section>
           </div>
+
           <div class="menu__btn">
             <button class="btn">Commander</button>
           </div>
