--- a/pages/lapalettedugout.html
+++ b/pages/lapalettedugout.html
@@ -8,13 +8,12 @@
       name="description"
       content="Réservez au restaurant La palette du goût"
     />
-    <link rel="icon" href="img/utensils-solid.svg" />
+    <link rel="icon" href="../img/restaurants/restaurant.svg" />
     <link rel="stylesheet" type="text/css" href="../public/css/main.css" />
     <script
       src="https://kit.fontawesome.com/77ad40af8d.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="../img/restaurant.svg" />
     <title>Ohmyfood! - La palette du goût</title>
   </head>
   <body>
