--- a/pages/ledelicedessens.html
+++ b/pages/ledelicedessens.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="../public/css/main.css" media="screen" />
-    <link rel="shortcut icon" href="../img/restaurant.svg" />
+    <link rel="shortcut icon" href="../img/restaurants/restaurant.svg" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
