--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="../public/css/main.css" media="screen" />
-    <link rel="shortcut icon" href="../img/restaurant.svg" />
+    <link rel="shortcut icon" href="../img/restaurants/restaurant.svg" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -45,152 +45,154 @@
       </header>
 
       <main>
-        <div class="poster">
-          <img
-            class="poster__img"
-            src="../img/restaurants/alafrancaise.jpg"
-            alt="restaurant à la française"
-          />
-        </div>
+        <!--Hero-->
+                <div class="poster">
+                  <img class="poster__img" src="../img/restaurants/alafrancaise.jpg" alt="restaurant à la française" />
+                </div>
+        <!--Menu-->
+                <div class="menu">
+                  <section class="menu__header">
+                    <h1 class="menu__title">À la française</h1>
+                    <div class="heart">
+                      <i class="far fa-heart heart--empty"></i>
+                      <i class="fas fa-heart heart--full"></i>
+                    </div>
+                  </section>
+                  <div class="menu__content">
+            <!--Starter-->
+                    <section class="menu__course">
+                      <div  class="menu__sub">
+                        <h2>Entrées</h2>
+                      </div>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Tartare de poulpe acidulé</h3>
+                          <p class="txt">Aux zestes d'orange</p>
+                        </div>
+                        <div class="food__price">
+                          <p>25€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Velouté de légumes d'antan</h3>
+                          <p class="txt">Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="food__price">
+                          <p>35€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Soupe à l'oignon</h3>
+                          <p class="txt">Revisitée</p>
+                        </div>
+                        <div class="food__price">
+                          <p>20€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                    </section>
+            <!--Main course-->
+                    <section class="menu__course">
+                      <div  class="menu__sub">
+                        <h2>Plats</h2>
+                      </div>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Coquilles Saint-Jacques</h3>
+                          <p class="txt">Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="food__price">
+                          <p>40€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Magret de canard</h3>
+                          <p class="txt">Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="food__price">
+                          <p>35€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Pigeonneau d’Ille-et-Vilaine</h3>
+                          <p class="txt">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="food__price">
+                          <p>44€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                    </section>
+            <!--Dessert-->
+                    <section class="menu__course">
+                      <div  class="menu__sub">
+                        <h2>Desserts</h2>
+                      </div>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Pétales de violettes glacés</h3>
+                          <p class="txt">Et purée de noisettes</p>
+                        </div>
+                        <div class="food__price">
+                          <p>18€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Fondant au chocolat</h3>
+                          <p class="txt">Revisité</p>
+                        </div>
+                        <div class="food__price">
+                          <p>22€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                      <article class="food">
+                        <div class="food__description">
+                          <h3 class="sub">Millefeuille croustillant</h3>
+                          <p class="txt">Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="food__price">
+                          <p>23€</p>
+                        </div>
+                        <div class="food__check">
+                          <i class="fas fa-check-circle food__icon"></i>
+                        </div>
+                      </article>
+                    </section>
+                  </div>
+            <!--Order-->
+                  <div class="menu__btn">
+                    <button class="btn">Commander</button>
+                  </div>
+                </div>
+              </main>
 
-        <div class="menu">
-          <section class="menu__header">
-            <h1 class="menu__title">À la française</h1>
-            <div class="heart">
-              <i class="far fa-heart heart--empty"></i>
-              <i class="fas fa-heart heart--full"></i>
-            </div>
-          </section>
-          <div class="menu__content">
-            <section class="menu__course">
-              <div class="menu__sub">
-                <h2>Entrées</h2>
-              </div>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Tartare de poulpe acidulé</h3>
-                  <p class="txt">Aux zestes d'orange</p>
-                </div>
-                <div class="food__price">
-                  <p>25€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Velouté de légumes d'antan</h3>
-                  <p class="txt">Carotte, panais, topinambour</p>
-                </div>
-                <div class="food__price">
-                  <p>35€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Soupe à l'oignon</h3>
-                  <p class="txt">Revisitée</p>
-                </div>
-                <div class="food__price">
-                  <p>20€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-            </section>
-            <section class="menu__course">
-              <div class="menu__sub">
-                <h2>Plats</h2>
-              </div>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Coquilles Saint-Jacques</h3>
-                  <p class="txt">Accompagnées d'une purée de panais</p>
-                </div>
-                <div class="food__price">
-                  <p>40€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Magret de canard</h3>
-                  <p class="txt">Et parmentier de pommes de terre</p>
-                </div>
-                <div class="food__price">
-                  <p>35€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Pigeonneau d’Ille-et-Vilaine</h3>
-                  <p class="txt">Sur son lit de gnocchis aux légumes</p>
-                </div>
-                <div class="food__price">
-                  <p>44€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-            </section>
-            <section class="menu__course">
-              <div class="menu__sub">
-                <h2>Desserts</h2>
-              </div>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Pétales de violettes glacés</h3>
-                  <p class="txt">Et purée de noisettes</p>
-                </div>
-                <div class="food__price">
-                  <p>18€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Fondant au chocolat</h3>
-                  <p class="txt">Revisité</p>
-                </div>
-                <div class="food__price">
-                  <p>22€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-              <article class="food">
-                <div class="food__description">
-                  <h3 class="sub">Millefeuille croustillant</h3>
-                  <p class="txt">Myrtilles et pâte d’amande</p>
-                </div>
-                <div class="food__price">
-                  <p>23€</p>
-                </div>
-                <div class="food__check">
-                  <i class="fas fa-check-circle food__icon"></i>
-                </div>
-              </article>
-            </section>
-            <div class="menu__btn">
-              <button class="btn">Commander</button>
-            </div>
-          </div>
-        </div>
-      </main>
       <footer class="footer">
         <nav>
           <div class="footer__logo">
